test/files/neg/t7373.scala
import scala.collection.immutable._

object Test {
  val v = new Vector(1,2,3)
  val it = new VectorIterator(1,2)
}
